Fixed color issue with links. Color of the links in Groups tab under Settings is rendered unreadable in dark.css and other dark colored themes. This fixes the link color by matching the text accent color.

--- a/css/base/guacamole/guacamole-base.css
+++ b/css/base/guacamole/guacamole-base.css
@@ -352,6 +352,7 @@ textarea {
 
 
 .user a:visited,
+.user-group a:visited,
 .connection a:visited,
 .connection-group a:visited {
     text-decoration: none;
@@ -448,6 +449,7 @@ textarea {
 }
 
 .user a:visited,
+.user-group a:visited,
 .connection a:visited,
 .connection-group a:visited {
     text-decoration: none;
@@ -463,6 +465,7 @@ a.ng-binding:hover:not(.add-user):not(.button) {
 }
 
 .user a,
+.user-group a,
 .connection a,
 .connection-group a,
 a.ng-binding:not(.add-user):not(.button) {
